changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add 'spellmon 2' setup option, to send more spell information.
This includes if the spell needs arguments (another spell, ...)
and if the spell requires items to be cast.
Nicolas Weeger 2010-01-24

Enable spells to consume items to be cast.
Nicolas Weeger 2010-01-24

When talked to, NPCs now stay still a few ticks before moving - only if random movement.
Nicolas Weeger 2010-01-24

Give access to quest-related functions to the Python plugin.
Nicolas Weeger 2010-01-24

Tweak Spike's quest (Darcap) so it can be done again and again.
Nicolas Weeger 2010-01-24

Plugin access to 'quest_was_completed' function.
Nicolas Weeger 2010-01-24

Track quests already completed once, so we can avoid giving a super reward
all the time.
Nicolas Weeger 2010-01-24

Revamp quests, use a definition file to factorize things.
Nicolas Weeger 2010-01-24

General cleanup related to protocol and documentation.  Make many setup
options that have been around for a while standard.
MSW 2010-01-19
--
doc/Developers/protocol: Clean this up - remove obsolete commands,
    document protocol commands consistently, stating what type
    of data the different commands expect.  Update for new account
    based protocol commands (not yet implemented)
include/shared/newclient.h: Formatting fixes, add MSG_TYPE_ADMIN_ERROR
include/newserver.h: Remove fields from socket structure which are now
    considered standard.
include/sockproto.h: Add print_ext_msg()
socket/image.c: Remove code that handles setfacemode
socket/info.c: Always use drawextinfo
socket/init.c: remove initializations for what are now standard options.